crates/squealy-macros/tests/compile_fail/conflicting_primary_key_nullable.stderr
error: column `id` cannot be both `primary_key` and `nullable`
 --> tests/compile_fail/conflicting_primary_key_nullable.rs:3:10
  |
3 | #[derive(Table)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
